@@ -1,11 +1,12 @@
 package calendar.test;
 
 import static org.junit.Assert.*;
+import java.util.Arrays;
+import java.util.Collections;
 import org.junit.Test;
 import appointment.Appointment;
 import calendar.CalendarCell;
 import date.SimpleDate;
-import java.util.List;
 
 /**
  * @author Gabriel Glaser
@@ -18,7 +19,7 @@ public class TestCalendarCell {
 
     @Test
     public void testNoAppointments() {
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of());
+	CalendarCell calendarCell = new CalendarCell(testDate1, Collections.emptyList());
 	assertEquals(getExpectedDateString(testDate1), calendarCell.toString());
     }
 
@@ -27,34 +28,34 @@ public class TestCalendarCell {
 	final Appointment appointment1 = new Appointment(testDate2, "Sam", "", true);
 	final Appointment appointment2 = new Appointment(testDate2, "Frodo", "", false);
 	final Appointment appointment3 = new Appointment(testDate2, "Gandalf", "", true);
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(appointment1, appointment2, appointment3));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(appointment1, appointment2, appointment3));
 	assertEquals(getExpectedDateString(testDate1), calendarCell.toString());
     }
 
     @Test
     public void testWithOne() {
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(new Appointment(testDate1, "Sam", "", true)));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(new Appointment(testDate1, "Sam", "", true)));
 	assertEquals(getExpectedCellString(testDate1, "Sam"), calendarCell.toString());
     }
 
     @Test
     public void testEdgeCaseOfNameLength() {
 	String edgeWord = getEdgeWord();
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(new Appointment(testDate1, edgeWord, "", true)));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(new Appointment(testDate1, edgeWord, "", true)));
 	assertEquals(getExpectedCellString(testDate1, edgeWord), calendarCell.toString());
     }
 
     @Test
     public void testSpecialCaseOfNameLength() {
 	String specialCaseWord = getSpecialCaseWord();
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(new Appointment(testDate1, specialCaseWord, "", true)));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(new Appointment(testDate1, specialCaseWord, "", true)));
 	assertEquals(getExpectedCellString(testDate1, "1 Geburtstag"), calendarCell.toString());
     }
 
     @Test
     public void testSpecialCaseWithoutBirthday() {
 	String specialCaseWord = getSpecialCaseWord();
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(new Appointment(testDate1, specialCaseWord, "", false)));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(new Appointment(testDate1, specialCaseWord, "", false)));
 	assertEquals(getExpectedCellString(testDate1, "1 Termin"), calendarCell.toString());
     }
 
@@ -62,7 +63,7 @@ public class TestCalendarCell {
     public void testWithTwo() {
 	final Appointment appointment1 = new Appointment(testDate1, "Sam", "", true);
 	final Appointment appointment2 = new Appointment(testDate1, "Frodo", "", true);
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(appointment1, appointment2));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(appointment1, appointment2));
 	assertEquals(getExpectedCellString(testDate1, "2 Geburtstage"), calendarCell.toString());
     }
 
@@ -70,7 +71,7 @@ public class TestCalendarCell {
     public void testWithTwoWithoutAllBirthdays() {
 	final Appointment appointment1 = new Appointment(testDate1, "Sam", "", false);
 	final Appointment appointment2 = new Appointment(testDate1, "Frodo", "", true);
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(appointment1, appointment2));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(appointment1, appointment2));
 	assertEquals(getExpectedCellString(testDate1, "2 Termine"), calendarCell.toString());
     }
 
@@ -78,7 +79,7 @@ public class TestCalendarCell {
     public void testWithTwoButOnlyOneIsAt() {
 	final Appointment appointment1 = new Appointment(testDate1, "Sam", "", false);
 	final Appointment appointment2 = new Appointment(testDate2, "Frodo", "", true);
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(appointment1, appointment2));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(appointment1, appointment2));
 	assertEquals(getExpectedCellString(testDate1, "Sam"), calendarCell.toString());
     }
 
@@ -87,7 +88,7 @@ public class TestCalendarCell {
 	final Appointment appointment1 = new Appointment(testDate1, "Sam", "", true);
 	final Appointment appointment2 = new Appointment(testDate1, "Frodo", "", true);
 	final Appointment appointment3 = new Appointment(testDate1, "Gandalf", "", true);
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(appointment1, appointment2, appointment3));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(appointment1, appointment2, appointment3));
 	assertEquals(getExpectedCellString(testDate1, "3 Geburtstage"), calendarCell.toString());
     }
 
@@ -96,7 +97,7 @@ public class TestCalendarCell {
 	final Appointment appointment1 = new Appointment(testDate1, "Sam", "", false);
 	final Appointment appointment2 = new Appointment(testDate1, "Frodo", "", false);
 	final Appointment appointment3 = new Appointment(testDate1, "Gandalf", "", true);
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(appointment1, appointment2, appointment3));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(appointment1, appointment2, appointment3));
 	assertEquals(getExpectedCellString(testDate1, "3 Termine"), calendarCell.toString());
     }
 
@@ -105,7 +106,7 @@ public class TestCalendarCell {
 	final Appointment appointment1 = new Appointment(testDate1, "Sam", "", false);
 	final Appointment appointment2 = new Appointment(testDate2, "Frodo", "", false);
 	final Appointment appointment3 = new Appointment(testDate1, "Gandalf", "", true);
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(appointment1, appointment2, appointment3));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(appointment1, appointment2, appointment3));
 	assertEquals(getExpectedCellString(testDate1, "2 Termine"), calendarCell.toString());
     }
 
@@ -114,7 +115,7 @@ public class TestCalendarCell {
 	final Appointment appointment1 = new Appointment(testDate1, "Sam", "", true);
 	final Appointment appointment2 = new Appointment(testDate2, "Frodo", "", false);
 	final Appointment appointment3 = new Appointment(testDate1, "Gandalf", "", true);
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(appointment1, appointment2, appointment3));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(appointment1, appointment2, appointment3));
 	assertEquals(getExpectedCellString(testDate1, "2 Geburtstage"), calendarCell.toString());
     }
 
@@ -123,7 +124,7 @@ public class TestCalendarCell {
 	final Appointment appointment1 = new Appointment(testDate2, "Sam", "", true);
 	final Appointment appointment2 = new Appointment(testDate2, "Frodo", "", false);
 	final Appointment appointment3 = new Appointment(testDate1, "Gandalf", "", true);
-	CalendarCell calendarCell = new CalendarCell(testDate1, List.of(appointment1, appointment2, appointment3));
+	CalendarCell calendarCell = new CalendarCell(testDate1, Arrays.asList(appointment1, appointment2, appointment3));
 	assertEquals(getExpectedCellString(testDate1, "Gandalf"), calendarCell.toString());
     }
 
